recreated Java11 compatibility